src/assets/css/components/_service-cards.scss
@use "../base/breakpoints" as *;

.service-cards__grid {
  grid-template-columns: 1fr;

  @media (min-width: $breakpoint-m) {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.service-cards {
  background-color: var(--color-purple);

  & h1 {
    color: var(--color-white);
  }

  & .service-card__grid-element {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 4rem 2rem;

    @media (min-width: $breakpoint-m) {
      padding: 2.3rem;
    }
  }
}

.service-cards__intro {
  max-width: 64remp;
}

.service-cards__logo {
  position: relative;
  max-width: 80%;
}

.service-cards__grid-element {
  background-color: var(--color-white);
  color: black;

  & a {
    text-decoration: none;

    &:hover {
      text-decoration: none;
    }
  }
}

.service-card__content {
  min-height: max-content;
}

